added missing assets. added tech tags to projects.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <hr> <!-- divider -->
         <div class="info-cont">
-          <div class="info">
+          <a id="email" class="info" href="mailto:r.ariel.timothy@gmail.com">
             <div class="icon">
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Zm320-280L160-640v400h640v-400L480-440Zm0-80 320-200H160l320 200ZM160-640v-80 480-400Z"/></svg>
             </div>
@@ -38,7 +38,7 @@
               <p class="info-header">EMAIL</p>
               <p>r.ariel.timothy@gmail.com</p>
             </div>
-          </div>
+          </a>
           <div class="info">
             <div class="icon">
               <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M280-40q-33 0-56.5-23.5T200-120v-720q0-33 23.5-56.5T280-920h400q33 0 56.5 23.5T760-840v720q0 33-23.5 56.5T680-40H280Zm0-120v40h400v-40H280Zm0-80h400v-480H280v480Zm0-560h400v-40H280v40Zm0 0v-40 40Zm0 640v40-40Z"/></svg>
@@ -179,8 +179,15 @@
                     <div class="project-img-cont">
                       <img src="assets/images/project-previews/musang-forum.png" alt="Musang Forum">
                     </div>
-                    <p>Musang Forum</p>
-                    <p>Desktop Application</p>
+                    <div class="project-description-cont">
+                      <h3>Musang Forum</h3>
+                      <p>Desktop Application</p>
+                      <div class="tech-tags">
+                        <p class="tech-tag java">Java</p>
+                        <p class="tech-tag javafx">JavaFX</p>
+                        <p class="tech-tag mysql">MySQL</p>
+                      </div>
+                    </div>
                   </div>
 
                   <!-- item -->
@@ -188,8 +195,15 @@
                     <div class="project-img-cont">
                       <img src="assets/images/project-previews/musang-forum.png" alt="Musang Forum">
                     </div>
-                    <p>Musang Forum</p>
-                    <p>Desktop Application</p>
+                    <div class="project-description-cont">
+                      <h3>Musang Forum</h3>
+                      <p>Desktop Application</p>
+                      <div class="tech-tags">
+                        <p class="tech-tag java">Java</p>
+                        <p class="tech-tag javafx">JavaFX</p>
+                        <p class="tech-tag mysql">MySQL</p>
+                      </div>
+                    </div>
                   </div>
 
                   <!-- item -->
@@ -197,8 +211,31 @@
                     <div class="project-img-cont">
                       <img src="assets/images/project-previews/musang-forum.png" alt="Musang Forum">
                     </div>
-                    <p>Musang Forum</p>
-                    <p>Desktop Application</p>
+                    <div class="project-description-cont">
+                      <h3>Musang Forum</h3>
+                      <p>Desktop Application</p>
+                      <div class="tech-tags">
+                        <p class="tech-tag java">Java</p>
+                        <p class="tech-tag javafx">JavaFX</p>
+                        <p class="tech-tag mysql">MySQL</p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- item -->
+                  <div class="project-item desktop-application">
+                    <div class="project-img-cont">
+                      <img src="assets/images/project-previews/musang-forum.png" alt="Musang Forum">
+                    </div>
+                    <div class="project-description-cont">
+                      <h3>Musang Forum</h3>
+                      <p>Desktop Application</p>
+                      <div class="tech-tags">
+                        <p class="tech-tag java">Java</p>
+                        <p class="tech-tag javafx">JavaFX</p>
+                        <p class="tech-tag mysql">MySQL</p>
+                      </div>
+                    </div>
                   </div>
 
                   <!-- item -->
