made project view more user-friendly

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h2>Rainer Ariel Timothy</h2>
           </div>
           <div class="role-tag">
-            <p>Software Engineer</p>
+            <p>Aspiring Front-End Developer</p>
           </div>
         </div>
       </div>
@@ -113,13 +113,13 @@
           <div class="section-1">
             <p>
               Hey! Thanks for visiting my portfolio. My name is Rainer Ariel Timothy,
-              and I am an Undergraduate Information Systems student at BINUS University
+              and I am an Undergraduate Information Systems student at BINUS University.
             </p>
             <p>
-              I'm passionate in areas such as Software Engineering and User Interface
-              Design. In my free time, I always try to improve my skills and keep up
-              with the latest technologies in this field. I enjoy working in teams and
-              to contribute in meaningful projects.
+              I'm passionate about building visually engaging, user-friendly interfaces using HTML,
+              CSS, and JavaScript. I'm currently expanding my skill set by learning modern front-end
+              frameworks and best practices. I enjoy working in teams and to contribute in
+              meaningful projects.
             </p>
             <p>
               This portfolio is a way for me to show you what I have learned and done
@@ -136,7 +136,7 @@
                 </div>
                 <div class="card-description-cont">
                   <h3>User Interface Design</h3>
-                  <p>Making modern and high-quality user interface designs.</p>
+                  <p>Designing modern, high-quality user interfaces that focus on usability and aesthetic appeal.</p>
                 </div>
               </div>
               <div class="card">
@@ -145,7 +145,7 @@
                 </div>
                 <div class="card-description-cont">
                   <h3>Front-End Web Development</h3>
-                  <p>Lorem ipsum dolor sit amet. Bla bla bla bla bla</p>
+                  <p>Building responsive websites using HTML, CSS, and JavaScript. With a focus on improving my skills.</p>
                 </div>
               </div>
               <div class="card">
@@ -154,7 +154,7 @@
                 </div>
                 <div class="card-description-cont">
                   <h3>Desktop Application Development</h3>
-                  <p>Using Java to make high-quality desktop applications for your business.</p>
+                  <p>Developing robust desktop applications using Java, with experience in object-oriented programming.</p>
                 </div>
               </div>
               <div class="card">
@@ -163,7 +163,7 @@
                 </div>
                 <div class="card-description-cont">
                   <h3>Database Design</h3>
-                  <p>Create, develop, and maintain efficient database.</p>
+                  <p>Designing, developing, and maintaining efficient databases to support dynamic applications.</p>
                 </div>
               </div>
             </div>
